-hpp profile hero image has been compressed -index folders alignment bug found and fixed in tablet view -z-index: -1 given to the last red string in homepage

--- a/src/styles/components/_case-file.scss
+++ b/src/styles/components/_case-file.scss
@@ -177,6 +177,7 @@
             bottom: 7.5rem;
             transform: rotate(355deg);
             width: 1666.19px;
+            z-index: -1;
         }
 
         @media screen and (min-width:1000px) {
